--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mocha": "^5.2.0"
   },
   "dependencies": {
+    "jointjs": "^3.6.4",
     "webgme": "latest",
     "webgme-bindings": "latest",
     "webgme-cli": "latest"
